--- a/index.avaliacoes.html
+++ b/index.avaliacoes.html
@@ -1,255 +1,165 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <title>Pesquisa de Satisfação</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <title>Painel de Avaliações - Grupo DV</title>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body {
-      background: #111;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    img {
-      display: block;
-      margin: 0 auto;
-      max-height: 80px;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    form {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    .question {
-      margin-bottom: 20px;
-    }
-    .question label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: bold;
-    }
-    input[type="text"], select, textarea {
-      width: 100%;
-      padding: 10px;
-      background: #222;
-      border: 1px solid #555;
-      color: #eee;
-      border-radius: 4px;
-      margin-bottom: 10px;
-    }
-    input[type="radio"] {
-      margin-right: 6px;
-    }
-    .options label {
-      display: block;
-      margin: 4px 0;
-    }
-    .justify {
-      display: none;
-      margin-top: 10px;
-    }
-    button {
-      width: 100%;
-      background: #28a745;
-      color: #fff;
-      border: none;
-      padding: 15px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-    }
-    button:hover {
-      background: #218838;
-    }
-    #status {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 16px;
-    }
-    .success {
-      color: #0f0;
-    }
-    .error {
-      color: #f33;
-    }
+    body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; margin: 0; }
+    h1 { text-align: center; margin-bottom: 30px; }
+    .filtros { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
+    select, input, button { padding: 6px 12px; font-size: 16px; }
+    table { width: 100%; border-collapse: collapse; background: white; margin-top: 20px; }
+    th, td { padding: 10px; border: 1px solid #ccc; text-align: left; }
+    th { background-color: #eee; }
+    canvas { max-width: 800px; margin: 30px auto; display: block; }
   </style>
 </head>
 <body>
 
-<img src="https://static.wixstatic.com/media/d830b0_883ba5848c5149d480f3957327c6f776~mv2.png" alt="Logo Delícia Gourmet">
-<h1>Pesquisa de Satisfação</h1>
+<h1>📊 Painel de Avaliações - Grupo DV</h1>
 
-<form id="pesquisaForm">
+<div class="filtros">
+  <select id="empresaSelect">
+    <option value="Todas">Todas as Empresas</option>
+    <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
+    <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
+  </select>
+  <input type="date" id="dataInicio">
+  <input type="date" id="dataFim">
+  <button onclick="filtrarDados()">Filtrar</button>
+</div>
 
-  <div class="question">
-    <label>Nome e sobrenome *</label>
-    <input type="text" name="nome" required>
-  </div>
+<div id="resumo"></div>
+<canvas id="grafico"></canvas>
 
-  <div class="question">
-    <label>Qual a data de seu aniversário?</label>
-    <div style="display: flex; gap: 10px;">
-      <input type="text" name="dia" placeholder="Dia" style="flex:1;">
-      <select name="mes" style="flex:2;">
-        <option value="">Mês</option>
-        <option>Janeiro</option><option>Fevereiro</option><option>Março</option><option>Abril</option>
-        <option>Maio</option><option>Junho</option><option>Julho</option><option>Agosto</option>
-        <option>Setembro</option><option>Outubro</option><option>Novembro</option><option>Dezembro</option>
-      </select>
-      <input type="text" name="ano" placeholder="Ano" style="flex:1;">
-    </div>
-  </div>
-
-  <div class="question">
-    <label>Telefone</label>
-    <input type="text" name="telefone">
-  </div>
-
-  <div class="question">
-    <label>Em qual cidade mora? *</label>
-    <div class="options">
-      <label><input type="radio" name="cidade" value="Barreiras-BA" onclick="toggleOutra()"> Barreiras-BA</label>
-      <label><input type="radio" name="cidade" value="Luis Eduardo Magalhães-BA" onclick="toggleOutra()"> Luis Eduardo Magalhães-BA</label>
-      <label><input type="radio" name="cidade" value="Outra" onclick="toggleOutra()"> Outra</label>
-    </div>
-    <div id="outra-cidade" style="display:none;">
-      <input type="text" name="cidade_outra" placeholder="Qual cidade?">
-    </div>
-  </div>
-
-  <div class="question">
-    <label>O que achou do nosso ambiente?</label>
-    <div class="options">
-      <label><input type="radio" name="ambiente" value="Ótimo" onclick="toggleJustify(this)"> Ótimo</label>
-      <label><input type="radio" name="ambiente" value="Bom" onclick="toggleJustify(this)"> Bom</label>
-      <label><input type="radio" name="ambiente" value="Ruim" onclick="toggleJustify(this)"> Ruim</label>
-    </div>
-    <div class="justify" id="ambiente-justify">
-      <textarea name="ambiente_justificativa" placeholder="Descreva o motivo"></textarea>
-    </div>
-  </div>
-
-  <div class="question">
-    <label>O que achou da iluminação?</label>
-    <div class="options">
-      <label><input type="radio" name="iluminacao" value="Ótimo" onclick="toggleJustify(this)"> Ótimo</label>
-      <label><input type="radio" name="iluminacao" value="Bom" onclick="toggleJustify(this)"> Bom</label>
-      <label><input type="radio" name="iluminacao" value="Ruim" onclick="toggleJustify(this)"> Ruim</label>
-    </div>
-    <div class="justify" id="iluminacao-justify">
-      <textarea name="iluminacao_justificativa" placeholder="Descreva o motivo"></textarea>
-    </div>
-  </div>
-
-  <div class="question">
-    <label>Como estava a comida?</label>
-    <div class="options">
-      <label><input type="radio" name="comida" value="Ótima" onclick="toggleJustify(this)"> Ótima</label>
-      <label><input type="radio" name="comida" value="Boa" onclick="toggleJustify(this)"> Boa</label>
-      <label><input type="radio" name="comida" value="Ruim" onclick="toggleJustify(this)"> Ruim</label>
-    </div>
-    <div class="justify" id="comida-justify">
-      <textarea name="comida_justificativa" placeholder="Descreva o motivo"></textarea>
-    </div>
-  </div>
-
-  <div class="question">
-    <label>Como avalia o atendimento recebido?</label>
-    <div class="options">
-      <label><input type="radio" name="atendimento" value="Ótimo" onclick="toggleJustify(this)"> Ótimo</label>
-      <label><input type="radio" name="atendimento" value="Bom" onclick="toggleJustify(this)"> Bom</label>
-      <label><input type="radio" name="atendimento" value="Ruim" onclick="toggleJustify(this)"> Ruim</label>
-    </div>
-    <div class="justify" id="atendimento-justify">
-      <textarea name="atendimento_justificativa" placeholder="Descreva o motivo"></textarea>
-    </div>
-  </div>
-
-  <div class="question">
-    <label>O que achou da climatização?</label>
-    <div class="options">
-      <label><input type="radio" name="climatizacao" value="Ótima" onclick="toggleJustify(this)"> Ótima</label>
-      <label><input type="radio" name="climatizacao" value="Boa" onclick="toggleJustify(this)"> Boa</label>
-      <label><input type="radio" name="climatizacao" value="Ruim" onclick="toggleJustify(this)"> Ruim</label>
-    </div>
-    <div class="justify" id="climatizacao-justify">
-      <textarea name="climatizacao_justificativa" placeholder="Descreva o motivo"></textarea>
-    </div>
-  </div>
-
-  <div class="question">
-    <label>O que gostaria que fosse adicionado ao cardápio?</label>
-    <input type="text" name="cardapio_sugestao">
-  </div>
-
-  <button type="submit">Enviar Resposta</button>
-  <div id="status"></div>
-
-</form>
+<table>
+  <thead>
+    <tr>
+      <th>Data</th>
+      <th>Empresa</th>
+      <th>Nome</th>
+      <th>Ambiente</th>
+      <th>Iluminação</th>
+      <th>Comida</th>
+      <th>Música</th>
+      <th>Atendimento</th>
+      <th>Sugestão</th>
+    </tr>
+  </thead>
+  <tbody id="tabelaAvaliacoes"></tbody>
+</table>
 
 <script>
-function toggleOutra() {
-  const outra = document.querySelector('input[name="cidade"][value="Outra"]').checked;
-  document.getElementById('outra-cidade').style.display = outra ? 'block' : 'none';
-}
+  let avaliacoes = [];
 
-function toggleJustify(input) {
-  const question = input.name;
-  const justifyDiv = document.getElementById(`${question}-justify`);
-  if (input.value.toLowerCase() === "ruim") {
-    justifyDiv.style.display = "block";
-  } else {
-    justifyDiv.style.display = "none";
-    justifyDiv.querySelector("textarea").value = "";
+  const mapaNotas = { 'Ruim': 1, 'Bom': 2, 'Boa': 2, 'Boas': 2, 'Ótimo': 3, 'Ótimas': 3 };
+
+  async function carregarAvaliacoes() {
+    const url = 'https://script.google.com/macros/s/AKfycbyK3A5CDn_EgA3pbRVToh87_qKWvbIry886OkR1AdkJi7RyvSgcwY0BmRqhbKQnEKwgrA/exec'; // 🔁 Substitua aqui!
+    const res = await fetch(url);
+    const dados = await res.json();
+    avaliacoes = dados;
+    filtrarDados();
   }
-}
 
-document.getElementById('pesquisaForm').addEventListener('submit', function(e) {
-  e.preventDefault();
+  function filtrarDados() {
+    const empresaFiltro = document.getElementById("empresaSelect").value;
+    const inicio = document.getElementById("dataInicio").value;
+    const fim = document.getElementById("dataFim").value;
 
-  const data = {
-    nome: document.querySelector('[name="nome"]').value,
-    aniversario: document.querySelector('[name="dia"]').value + "/" +
-                  document.querySelector('[name="mes"]').value + "/" +
-                  document.querySelector('[name="ano"]').value,
-    telefone: document.querySelector('[name="telefone"]').value,
-    cidade: document.querySelector('input[name="cidade"]:checked')?.value === "Outra"
-            ? document.querySelector('[name="cidade_outra"]').value
-            : document.querySelector('input[name="cidade"]:checked')?.value || '',
-    ambiente: document.querySelector('input[name="ambiente"]:checked')?.value || '',
-    ambiente_justificativa: document.querySelector('[name="ambiente_justificativa"]').value || '',
-    iluminacao: document.querySelector('input[name="iluminacao"]:checked')?.value || '',
-    iluminacao_justificativa: document.querySelector('[name="iluminacao_justificativa"]').value || '',
-    comida: document.querySelector('input[name="comida"]:checked')?.value || '',
-    comida_justificativa: document.querySelector('[name="comida_justificativa"]').value || '',
-    atendimento: document.querySelector('input[name="atendimento"]:checked')?.value || '',
-    atendimento_justificativa: document.querySelector('[name="atendimento_justificativa"]').value || '',
-    climatizacao: document.querySelector('input[name="climatizacao"]:checked')?.value || '',
-    climatizacao_justificativa: document.querySelector('[name="climatizacao_justificativa"]').value || '',
-    cardapio_sugestao: document.querySelector('[name="cardapio_sugestao"]').value || ''
-  };
+    const filtradas = avaliacoes.filter(a => {
+      const dataOk = (!inicio || a.data >= inicio) && (!fim || a.data <= fim);
+      const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
+      return dataOk && empresaOk;
+    });
 
-  fetch("https://script.google.com/macros/s/AKfycbwoq1-KXaIw2Ncpm2xDMRT73x_vPpFWu7nCDQ3wM55mkliVx5FISJLlgDOvElY5pS-B/exec", {
-    method: "POST",
-    body: JSON.stringify(data),
-    headers: { "Content-Type": "application/json" }
-  })
-  .then(r => r.text())
-  .then(() => {
-    document.getElementById('status').innerHTML = "<p class='success'>✅ Obrigado! Resposta enviada com sucesso.</p>";
-    document.getElementById('pesquisaForm').reset();
-    document.querySelectorAll('.justify').forEach(j => j.style.display = 'none');
-    document.getElementById('outra-cidade').style.display = 'none';
-  })
-  .catch(err => {
-    document.getElementById('status').innerHTML = "<p class='error'>❌ Erro: " + err + "</p>";
-  });
-});
+    atualizarTabela(filtradas);
+    atualizarResumo(filtradas);
+    atualizarGrafico(filtradas);
+  }
+
+  function atualizarTabela(lista) {
+    const corpo = document.getElementById("tabelaAvaliacoes");
+    corpo.innerHTML = "";
+    lista.forEach(a => {
+      corpo.innerHTML += `
+        <tr>
+          <td>${a.data}</td>
+          <td>${a.empresa}</td>
+          <td>${a.nome}</td>
+          <td>${a.ambiente}</td>
+          <td>${a.iluminacao}</td>
+          <td>${a.comida}</td>
+          <td>${a.musica}</td>
+          <td>${a.atendimento}</td>
+          <td>${a.sugestao}</td>
+        </tr>
+      `;
+    });
+  }
+
+  function calcularMedia(lista, campo) {
+    const notas = lista.map(a => mapaNotas[a[campo]]).filter(n => n);
+    const media = notas.reduce((soma, n) => soma + n, 0) / notas.length || 0;
+    return media.toFixed(2);
+  }
+
+  function atualizarResumo(lista) {
+    const div = document.getElementById("resumo");
+    div.innerHTML = `
+      <p><strong>Total de Avaliações:</strong> ${lista.length}</p>
+      <p><strong>Média Ambiente:</strong> ${calcularMedia(lista, "ambiente")}</p>
+      <p><strong>Média Iluminação:</strong> ${calcularMedia(lista, "iluminacao")}</p>
+      <p><strong>Média Comida:</strong> ${calcularMedia(lista, "comida")}</p>
+      <p><strong>Média Música:</strong> ${calcularMedia(lista, "musica")}</p>
+      <p><strong>Média Atendimento:</strong> ${calcularMedia(lista, "atendimento")}</p>
+    `;
+  }
+
+  let grafico;
+  function atualizarGrafico(lista) {
+    const ctx = document.getElementById("grafico").getContext("2d");
+    const medias = [
+      calcularMedia(lista, "ambiente"),
+      calcularMedia(lista, "iluminacao"),
+      calcularMedia(lista, "comida"),
+      calcularMedia(lista, "musica"),
+      calcularMedia(lista, "atendimento")
+    ];
+
+    if (grafico) grafico.destroy();
+    grafico = new Chart(ctx, {
+      type: "bar",
+      data: {
+        labels: ["Ambiente", "Iluminação", "Comida", "Música", "Atendimento"],
+        datasets: [{
+          label: "Média",
+          data: medias,
+          backgroundColor: ['#f44336', '#ff9800', '#4caf50', '#2196f3', '#9c27b0']
+        }]
+      },
+      options: {
+        scales: {
+          y: {
+            beginAtZero: true,
+            max: 3,
+            ticks: {
+              stepSize: 1,
+              callback: value => {
+                if (value === 1) return "Ruim";
+                if (value === 2) return "Bom";
+                if (value === 3) return "Ótimo";
+                return value;
+              }
+            }
+          }
+        }
+      }
+    });
+  }
+
+  carregarAvaliacoes();
 </script>
 
 </body>
