--- a/index.html
+++ b/index.html
@@ -201,8 +201,10 @@
       <div class="icon">ABC</div>
       <h2>ABC de Vendas</h2>
     </a>
-
-
+  <a class="card" href="index.avaliacoes.html">
+      <div class="icon">🔎</div>
+      <h2>Pesquisa de satisfação</h2>
+    </a>
   </div>
 
   <!-- Script splash -->
