--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -53,7 +53,7 @@
 <body>
 
   <header>
-    <img src="https://i.ibb.co/3y5N4HR/logo-cb-systems.png" alt="Logo CB Systems">
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
     <h1>Painel de Avaliações - Grupo DV</h1>
   </header>
 
@@ -75,7 +75,7 @@
     <table>
       <thead>
         <tr>
-          <th>Data</th>
+          <th>Data e Horário</th>
           <th>Empresa</th>
           <th>Nome</th>
           <th>Ambiente</th>
@@ -122,9 +122,12 @@
       const corpo = document.getElementById("tabelaAvaliacoes");
       corpo.innerHTML = "";
       lista.forEach(a => {
+        const dataHora = new Date(a.data);
+        const dataFormatada = dataHora.toLocaleDateString('pt-BR');
+        const horaFormatada = dataHora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' });
         corpo.innerHTML += `
           <tr>
-            <td>${a.data}</td>
+            <td>${dataFormatada} ${horaFormatada}</td>
             <td>${a.empresa}</td>
             <td>${a.nome}</td>
             <td>${a.ambiente}</td>
