--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -1,210 +1,249 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel de Avaliações - Grupo DV</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8" />
+  <title>Relatório Consolidado</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #111;
+      color: white;
+      padding-top: 40px; /* espaço para cabeçalho fixo */
+    }
+    /* Cabeçalho fixo */
     header {
-      background: white;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 40px;
+      background: #222;
       display: flex;
       align-items: center;
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      justify-content: flex-end;
+      padding: 0 15px;
+      z-index: 1100;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.7);
     }
-    header img {
-      height: 60px;
-      margin-right: 20px;
+    header a {
+      display: flex;
+      align-items: center;
+      color: white;
+      text-decoration: none;
+      cursor: pointer;
     }
-    header h1 {
-      font-size: 1.4em;
-      text-align: center;
-      flex: 1;
+    header a:hover svg path {
+      fill: #25d366;
     }
-    .container { padding: 20px; }
-    .filtros { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
-    select, input, button {
-      padding: 12px;
-      font-size: 1.1em;
-      width: 100%;
-      max-width: 300px;
+    header svg {
+      width: 24px;
+      height: 24px;
+      fill: white;
+      transition: fill 0.3s ease;
     }
-    #resumo p {
-      font-size: 1.2em;
-      margin: 8px 0;
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 20px;
+      padding: 20px;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
+    .card {
+      position: relative;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+      overflow: hidden;
       background: white;
-      font-size: 1em;
+      color: black;
     }
-    th, td {
-      padding: 10px;
-      border: 1px solid #ccc;
-      text-align: left;
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+      display: block;
     }
-    th { background: #eee; }
-    canvas { max-width: 100%; margin: 30px auto; display: block; }
+    .btn-open {
+      position: absolute;
+      top: 8px;
+      right: 8px;
+      background: #388e3c;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 4px 10px;
+      font-size: 0.85em;
+      cursor: pointer;
+      z-index: 10;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+    .btn-open:hover {
+      background-color: #2c6f2c;
+    }
+    /* Modal */
+    #modalOverlay {
+      display: none;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.75);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+    }
+    #modalContent {
+      position: relative;
+      width: 90%;
+      max-width: 900px;
+      height: 80vh;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+      overflow: hidden;
+    }
+    #modalContent iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+    #modalClose {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      background: #e74c3c;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      color: white;
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 28px;
+      cursor: pointer;
+      z-index: 10;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+    #modalClose:hover {
+      background-color: #c0392b;
+    }
+
+    @media (max-width: 1200px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+    @media (max-width: 600px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
+      iframe {
+        height: 500px;
+      }
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-    <h1>Painel de Avaliações - Grupo DV</h1>
+    <a href="index.html" title="Voltar para tela principal" aria-label="Voltar para tela principal">
+      <!-- Ícone de casa simples SVG -->
+      <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+        <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+      </svg>
+    </a>
   </header>
 
-  <div class="container">
-    <div class="filtros">
-      <select id="empresaSelect">
-        <option value="Todas">Todas as Empresas</option>
-        <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
-        <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
-      </select>
-      <input type="date" id="dataInicio">
-      <input type="date" id="dataFim">
-      <button onclick="filtrarDados()">Filtrar</button>
+  <div class="grid">
+    <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
+      <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
     </div>
+    <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
+      <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
+    </div>
+    <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
+      <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
+    </div>
+    <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
+      <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
+    </div>
+    <div class="card" data-url="https://grupodvbr.github.io/MENU-LEONARDO/index.meta.html">
+      <button class="btn-open" title="Abrir relatório">Abrir</button>
+      <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.meta.html"></iframe>
+    </div>
+  </div>
 
-    <div id="resumo"></div>
-    <canvas id="grafico"></canvas>
-
-    <table>
-      <thead>
-        <tr>
-          <th>Data e Horário</th>
-          <th>Empresa</th>
-          <th>Nome</th>
-          <th>Ambiente</th>
-          <th>Iluminação</th>
-          <th>Comida</th>
-          <th>Música</th>
-          <th>Atendimento</th>
-          <th>Sugestão</th>
-        </tr>
-      </thead>
-      <tbody id="tabelaAvaliacoes"></tbody>
-    </table>
+  <!-- Modal -->
+  <div id="modalOverlay">
+    <div id="modalContent">
+      <button id="modalClose" title="Fechar">&times;</button>
+      <iframe src="" frameborder="0"></iframe>
+    </div>
   </div>
 
   <script>
-    let avaliacoes = [];
-    const mapaNotas = { 'Ruim': 1, 'Bom': 2, 'Boa': 2, 'Boas': 2, 'Ótimo': 3, 'Ótimas': 3 };
+    const modalOverlay = document.getElementById('modalOverlay');
+    const modalIframe = modalOverlay.querySelector('iframe');
+    const modalClose = document.getElementById('modalClose');
 
-    async function carregarAvaliacoes() {
-      const url = 'https://script.google.com/macros/s/SEU_SCRIPT_URL/exec'; // <-- Substitua pela sua URL
-      const res = await fetch(url);
-      const dados = await res.json();
-      avaliacoes = dados;
-      filtrarDados();
+    // Abrir modal com url
+    function abrirModal(url) {
+      modalIframe.src = url;
+      modalOverlay.style.display = 'flex';
     }
 
-    function filtrarDados() {
-      const empresaFiltro = document.getElementById("empresaSelect").value;
-      const inicio = document.getElementById("dataInicio").value;
-      const fim = document.getElementById("dataFim").value;
+    // Fechar modal
+    function fecharModal() {
+      modalIframe.src = '';
+      modalOverlay.style.display = 'none';
+    }
 
-      const filtradas = avaliacoes.filter(a => {
-        const dataOk = (!inicio || a.data >= inicio) && (!fim || a.data <= fim);
-        const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
-        return dataOk && empresaOk;
+    modalClose.addEventListener('click', fecharModal);
+    modalOverlay.addEventListener('click', e => {
+      if(e.target === modalOverlay) fecharModal();
+    });
+
+    // Botões abrir nos cards
+    document.querySelectorAll('.btn-open').forEach(btn => {
+      btn.addEventListener('click', e => {
+        e.stopPropagation(); // para não disparar o triple click do card
+        const card = btn.closest('.card');
+        const url = card.getAttribute('data-url');
+        abrirModal(url);
       });
+    });
 
-      atualizarTabela(filtradas);
-      atualizarResumo(filtradas);
-      atualizarGrafico(filtradas);
-    }
+    // Triple click para abrir em nova aba (mantido)
+    document.querySelectorAll('.card').forEach(card => {
+      let clickCount = 0;
+      let clickTimer = null;
 
-    function atualizarTabela(lista) {
-      const corpo = document.getElementById("tabelaAvaliacoes");
-      corpo.innerHTML = "";
-      lista.forEach(a => {
-        const dataHora = new Date(a.data);
-        const dataCompleta = `${dataHora.toLocaleDateString('pt-BR')} às ${dataHora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' })}`;
-        corpo.innerHTML += `
-          <tr>
-            <td>${dataCompleta}</td>
-            <td>${a.empresa}</td>
-            <td>${a.nome}</td>
-            <td>${a.ambiente}</td>
-            <td>${a.iluminacao}</td>
-            <td>${a.comida}</td>
-            <td>${a.musica}</td>
-            <td>${a.atendimento}</td>
-            <td>${a.sugestao}</td>
-          </tr>
-        `;
-      });
-    }
+      card.addEventListener('click', () => {
+        clickCount++;
 
-    function calcularMedia(lista, campo) {
-      const notas = lista.map(a => mapaNotas[a[campo]]).filter(n => n);
-      const media = notas.reduce((soma, n) => soma + n, 0) / notas.length || 0;
-      return media.toFixed(2);
-    }
+        if (clickCount === 3) {
+          const url = card.getAttribute('data-url');
+          window.open(url, '_blank');
+          resetClicks();
+          return;
+        }
 
-    function atualizarResumo(lista) {
-      const div = document.getElementById("resumo");
-      div.innerHTML = `
-        <p><strong>Total de Avaliações:</strong> ${lista.length}</p>
-        <p><strong>Média Ambiente:</strong> ${calcularMedia(lista, "ambiente")}</p>
-        <p><strong>Média Iluminação:</strong> ${calcularMedia(lista, "iluminacao")}</p>
-        <p><strong>Média Comida:</strong> ${calcularMedia(lista, "comida")}</p>
-        <p><strong>Média Música:</strong> ${calcularMedia(lista, "musica")}</p>
-        <p><strong>Média Atendimento:</strong> ${calcularMedia(lista, "atendimento")}</p>
-      `;
-    }
+        if (clickTimer) clearTimeout(clickTimer);
+        clickTimer = setTimeout(() => {
+          resetClicks();
+        }, 600);
 
-    let grafico;
-    function atualizarGrafico(lista) {
-      const ctx = document.getElementById("grafico").getContext("2d");
-      const medias = [
-        calcularMedia(lista, "ambiente"),
-        calcularMedia(lista, "iluminacao"),
-        calcularMedia(lista, "comida"),
-        calcularMedia(lista, "musica"),
-        calcularMedia(lista, "atendimento")
-      ];
-
-      if (grafico) grafico.destroy();
-      grafico = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: ["Ambiente", "Iluminação", "Comida", "Música", "Atendimento"],
-          datasets: [{
-            label: "Média",
-            data: medias,
-            backgroundColor: ['#f44336', '#ff9800', '#4caf50', '#2196f3', '#9c27b0']
-          }]
-        },
-        options: {
-          scales: {
-            y: {
-              beginAtZero: true,
-              max: 3,
-              ticks: {
-                stepSize: 1,
-                callback: value => {
-                  if (value === 1) return "Ruim";
-                  if (value === 2) return "Bom";
-                  if (value === 3) return "Ótimo";
-                  return value;
-                }
-              }
-            }
-          }
+        function resetClicks() {
+          clickCount = 0;
+          clickTimer = null;
         }
       });
-    }
-
-    carregarAvaliacoes();
+    });
   </script>
-
 </body>
 </html>
