--- a/index.avaliacoes.html
+++ b/index.avaliacoes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Painel de Avaliações - Grupo DV</title>
-  <script src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -27,7 +27,7 @@
       margin-right: 10px;
     }
     header h1 {
-      font-size: 1.2em;
+      font-size: 1.5em;
       text-align: center;
       flex: 1;
       margin: 0;
