--- a/index.avaliacoes.html
+++ b/index.avaliacoes.html
@@ -2,165 +2,292 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Painel de Avaliações - Grupo DV</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f9f9f9; padding: 20px; margin: 0; }
-    h1 { text-align: center; margin-bottom: 30px; }
-    .filtros { display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin-bottom: 20px; }
-    select, input, button { padding: 6px 12px; font-size: 16px; }
-    table { width: 100%; border-collapse: collapse; background: white; margin-top: 20px; }
-    th, td { padding: 10px; border: 1px solid #ccc; text-align: left; }
-    th { background-color: #eee; }
-    canvas { max-width: 800px; margin: 30px auto; display: block; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+    }
+    header {
+      background: white;
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header img {
+      height: 50px;
+      margin-right: 10px;
+    }
+    header h1 {
+      font-size: 1.2em;
+      text-align: center;
+      flex: 1;
+      margin: 0;
+    }
+    .container {
+      padding: 10px;
+    }
+    .filtros-wrapper {
+      background: #fff;
+      position: sticky;
+      top: 70px;
+      z-index: 999;
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+    .filtros {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+    .date-group {
+      display: flex;
+      gap: 10px;
+      width: 100%;
+      max-width: 600px;
+      justify-content: center;
+    }
+    .date-group label {
+      display: flex;
+      flex-direction: column;
+      font-size: 0.9em;
+      flex: 1;
+    }
+    select, input, button {
+      padding: 10px;
+      font-size: 1em;
+      width: 100%;
+      max-width: 280px;
+    }
+    #resumo p {
+      font-size: 1em;
+      margin: 6px 0;
+    }
+    .tabela-container {
+      overflow-x: auto;
+    }
+    table {
+      min-width: 800px;
+      width: 100%;
+      border-collapse: collapse;
+      background: white;
+      font-size: 0.9em;
+    }
+    th, td {
+      padding: 6px;
+      border: 1px solid #ccc;
+      text-align: left;
+      word-wrap: break-word;
+    }
+    th {
+      background: #eee;
+    }
+    canvas {
+      max-width: 100%;
+      margin: 20px auto;
+      display: block;
+    }
+    @media (min-width: 768px) {
+      .filtros {
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+      header h1 {
+        font-size: 1.5em;
+      }
+      #resumo p {
+        font-size: 1.2em;
+      }
+      table {
+        font-size: 1em;
+      }
+      .date-group label {
+        max-width: 250px;
+      }
+    }
   </style>
 </head>
 <body>
 
-<h1>📊 Painel de Avaliações - Grupo DV</h1>
+  <header>
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+    <h1>Painel de Avaliações - Grupo DV</h1>
+  </header>
 
-<div class="filtros">
-  <select id="empresaSelect">
-    <option value="Todas">Todas as Empresas</option>
-    <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
-    <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
-  </select>
-  <input type="date" id="dataInicio">
-  <input type="date" id="dataFim">
-  <button onclick="filtrarDados()">Filtrar</button>
-</div>
+  <div class="filtros-wrapper">
+    <div class="filtros">
+      <select id="empresaSelect">
+        <option value="Todas">Todas as Empresas</option>
+        <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
+        <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
+      </select>
+      <div class="date-group">
+        <label>Início:
+          <input type="date" id="dataInicio">
+        </label>
+        <label>Fim:
+          <input type="date" id="dataFim">
+        </label>
+      </div>
+      <button onclick="filtrarDados()">Filtrar</button>
+    </div>
+  </div>
 
-<div id="resumo"></div>
-<canvas id="grafico"></canvas>
+  <div class="container">
+    <div id="resumo"></div>
+    <canvas id="grafico"></canvas>
+    <div class="tabela-container">
+      <table>
+        <thead>
+          <tr>
+            <th>Data e Horário</th>
+            <th>Empresa</th>
+            <th>Nome</th>
+            <th>Ambiente</th>
+            <th>Iluminação</th>
+            <th>Comida</th>
+            <th>Música</th>
+            <th>Atendimento</th>
+            <th>Sugestão</th>
+          </tr>
+        </thead>
+        <tbody id="tabelaAvaliacoes"></tbody>
+      </table>
+    </div>
+  </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Data</th>
-      <th>Empresa</th>
-      <th>Nome</th>
-      <th>Ambiente</th>
-      <th>Iluminação</th>
-      <th>Comida</th>
-      <th>Música</th>
-      <th>Atendimento</th>
-      <th>Sugestão</th>
-    </tr>
-  </thead>
-  <tbody id="tabelaAvaliacoes"></tbody>
-</table>
+  <script>
+    let avaliacoes = [];
+    const mapaNotas = { 'Ruim': 1, 'Bom': 2, 'Boa': 2, 'Boas': 2, 'Ótimo': 3, 'Ótimas': 3 };
 
-<script>
-  let avaliacoes = [];
+    async function carregarAvaliacoes() {
+      const url = 'https://script.google.com/macros/s/AKfycbyK3A5CDn_EgA3pbRVToh87_qKWvbIry886OkR1AdkJi7RyvSgcwY0BmRqhbKQnEKwgrA/exec';
+      const res = await fetch(url);
+      const dados = await res.json();
+      avaliacoes = dados;
 
-  const mapaNotas = { 'Ruim': 1, 'Bom': 2, 'Boa': 2, 'Boas': 2, 'Ótimo': 3, 'Ótimas': 3 };
+      if (avaliacoes.length) {
+        const datas = avaliacoes.map(a => new Date(a.data));
+        const min = new Date(Math.min(...datas));
+        const max = new Date(Math.max(...datas));
 
-  async function carregarAvaliacoes() {
-    const url = 'https://script.google.com/macros/s/AKfycbyK3A5CDn_EgA3pbRVToh87_qKWvbIry886OkR1AdkJi7RyvSgcwY0BmRqhbKQnEKwgrA/exec'; // 🔁 Substitua aqui!
-    const res = await fetch(url);
-    const dados = await res.json();
-    avaliacoes = dados;
-    filtrarDados();
-  }
+        document.getElementById("dataInicio").value = min.toISOString().split('T')[0];
+        document.getElementById("dataFim").value = max.toISOString().split('T')[0];
+      }
 
-  function filtrarDados() {
-    const empresaFiltro = document.getElementById("empresaSelect").value;
-    const inicio = document.getElementById("dataInicio").value;
-    const fim = document.getElementById("dataFim").value;
+      filtrarDados();
+    }
 
-    const filtradas = avaliacoes.filter(a => {
-      const dataOk = (!inicio || a.data >= inicio) && (!fim || a.data <= fim);
-      const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
-      return dataOk && empresaOk;
-    });
+    function filtrarDados() {
+      const empresaFiltro = document.getElementById("empresaSelect").value;
+      const inicio = document.getElementById("dataInicio").value;
+      const fim = document.getElementById("dataFim").value;
 
-    atualizarTabela(filtradas);
-    atualizarResumo(filtradas);
-    atualizarGrafico(filtradas);
-  }
+      const filtradas = avaliacoes.filter(a => {
+        const dataOk = (!inicio || a.data >= inicio) && (!fim || a.data <= fim);
+        const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
+        return dataOk && empresaOk;
+      });
 
-  function atualizarTabela(lista) {
-    const corpo = document.getElementById("tabelaAvaliacoes");
-    corpo.innerHTML = "";
-    lista.forEach(a => {
-      corpo.innerHTML += `
-        <tr>
-          <td>${a.data}</td>
-          <td>${a.empresa}</td>
-          <td>${a.nome}</td>
-          <td>${a.ambiente}</td>
-          <td>${a.iluminacao}</td>
-          <td>${a.comida}</td>
-          <td>${a.musica}</td>
-          <td>${a.atendimento}</td>
-          <td>${a.sugestao}</td>
-        </tr>
+      atualizarTabela(filtradas);
+      atualizarResumo(filtradas);
+      atualizarGrafico(filtradas);
+    }
+
+    function atualizarTabela(lista) {
+      const corpo = document.getElementById("tabelaAvaliacoes");
+      corpo.innerHTML = "";
+      lista.forEach(a => {
+        const dataHora = new Date(a.data);
+        const dataCompleta = `${dataHora.toLocaleDateString('pt-BR')} às ${dataHora.toLocaleTimeString('pt-BR', { hour: '2-digit', minute: '2-digit' })}`;
+        corpo.innerHTML += `
+          <tr>
+            <td>${dataCompleta}</td>
+            <td>${a.empresa}</td>
+            <td>${a.nome}</td>
+            <td>${a.ambiente}</td>
+            <td>${a.iluminacao}</td>
+            <td>${a.comida}</td>
+            <td>${a.musica}</td>
+            <td>${a.atendimento}</td>
+            <td>${a.sugestao}</td>
+          </tr>
+        `;
+      });
+    }
+
+    function calcularMedia(lista, campo) {
+      const notas = lista.map(a => mapaNotas[a[campo]]).filter(n => n);
+      const media = notas.reduce((soma, n) => soma + n, 0) / notas.length || 0;
+      return media.toFixed(2);
+    }
+
+    function atualizarResumo(lista) {
+      const div = document.getElementById("resumo");
+      div.innerHTML = `
+        <p><strong>Total de Avaliações:</strong> ${lista.length}</p>
+        <p><strong>Média Ambiente:</strong> ${calcularMedia(lista, "ambiente")}</p>
+        <p><strong>Média Iluminação:</strong> ${calcularMedia(lista, "iluminacao")}</p>
+        <p><strong>Média Comida:</strong> ${calcularMedia(lista, "comida")}</p>
+        <p><strong>Média Música:</strong> ${calcularMedia(lista, "musica")}</p>
+        <p><strong>Média Atendimento:</strong> ${calcularMedia(lista, "atendimento")}</p>
       `;
-    });
-  }
+    }
 
-  function calcularMedia(lista, campo) {
-    const notas = lista.map(a => mapaNotas[a[campo]]).filter(n => n);
-    const media = notas.reduce((soma, n) => soma + n, 0) / notas.length || 0;
-    return media.toFixed(2);
-  }
+    let grafico;
+    function atualizarGrafico(lista) {
+      const ctx = document.getElementById("grafico").getContext("2d");
+      const medias = [
+        calcularMedia(lista, "ambiente"),
+        calcularMedia(lista, "iluminacao"),
+        calcularMedia(lista, "comida"),
+        calcularMedia(lista, "musica"),
+        calcularMedia(lista, "atendimento")
+      ];
 
-  function atualizarResumo(lista) {
-    const div = document.getElementById("resumo");
-    div.innerHTML = `
-      <p><strong>Total de Avaliações:</strong> ${lista.length}</p>
-      <p><strong>Média Ambiente:</strong> ${calcularMedia(lista, "ambiente")}</p>
-      <p><strong>Média Iluminação:</strong> ${calcularMedia(lista, "iluminacao")}</p>
-      <p><strong>Média Comida:</strong> ${calcularMedia(lista, "comida")}</p>
-      <p><strong>Média Música:</strong> ${calcularMedia(lista, "musica")}</p>
-      <p><strong>Média Atendimento:</strong> ${calcularMedia(lista, "atendimento")}</p>
-    `;
-  }
-
-  let grafico;
-  function atualizarGrafico(lista) {
-    const ctx = document.getElementById("grafico").getContext("2d");
-    const medias = [
-      calcularMedia(lista, "ambiente"),
-      calcularMedia(lista, "iluminacao"),
-      calcularMedia(lista, "comida"),
-      calcularMedia(lista, "musica"),
-      calcularMedia(lista, "atendimento")
-    ];
-
-    if (grafico) grafico.destroy();
-    grafico = new Chart(ctx, {
-      type: "bar",
-      data: {
-        labels: ["Ambiente", "Iluminação", "Comida", "Música", "Atendimento"],
-        datasets: [{
-          label: "Média",
-          data: medias,
-          backgroundColor: ['#f44336', '#ff9800', '#4caf50', '#2196f3', '#9c27b0']
-        }]
-      },
-      options: {
-        scales: {
-          y: {
-            beginAtZero: true,
-            max: 3,
-            ticks: {
-              stepSize: 1,
-              callback: value => {
-                if (value === 1) return "Ruim";
-                if (value === 2) return "Bom";
-                if (value === 3) return "Ótimo";
-                return value;
+      if (grafico) grafico.destroy();
+      grafico = new Chart(ctx, {
+        type: "bar",
+        data: {
+          labels: ["Ambiente", "Iluminação", "Comida", "Música", "Atendimento"],
+          datasets: [{
+            label: "Média",
+            data: medias,
+            backgroundColor: ['#f44336', '#ff9800', '#4caf50', '#2196f3', '#9c27b0']
+          }]
+        },
+        options: {
+          scales: {
+            y: {
+              beginAtZero: true,
+              max: 3,
+              ticks: {
+                stepSize: 1,
+                callback: value => {
+                  if (value === 1) return "Ruim";
+                  if (value === 2) return "Bom";
+                  if (value === 3) return "Ótimo";
+                  return value;
+                }
               }
             }
           }
         }
-      }
-    });
-  }
+      });
+    }
 
-  carregarAvaliacoes();
-</script>
+    carregarAvaliacoes();
+  </script>
 
 </body>
 </html>
