--- a/index.avaliacoes.html
+++ b/index.avaliacoes.html
@@ -130,6 +130,7 @@
         <option value="Todas">Todas as Empresas</option>
         <option value="MERCATTO DELÍCIA">MERCATTO DELÍCIA</option>
         <option value="DELÍCIA GOURMET">DELÍCIA GOURMET</option>
+        <option value="VILLA GOURMET">VILLA GOURMET</option>
       </select>
       <div class="date-group">
         <label>Início:
