--- a/index.avaliacoes.html
+++ b/index.avaliacoes.html
@@ -190,20 +190,26 @@
     }
 
     function filtrarDados() {
-      const empresaFiltro = document.getElementById("empresaSelect").value;
-      const inicio = document.getElementById("dataInicio").value;
-      const fim = document.getElementById("dataFim").value;
+  const empresaFiltro = document.getElementById("empresaSelect").value;
+  const inicio = document.getElementById("dataInicio").value;
+  const fim = document.getElementById("dataFim").value;
 
-      const filtradas = avaliacoes.filter(a => {
-        const dataOk = (!inicio || a.data >= inicio) && (!fim || a.data <= fim);
-        const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
-        return dataOk && empresaOk;
-      });
+  const filtradas = avaliacoes.filter(a => {
+    const dataAvaliacao = new Date(a.data);
+    const dataInicio = inicio ? new Date(inicio) : null;
+    const dataFim = fim ? new Date(fim + 'T23:59:59') : null;
 
-      atualizarTabela(filtradas);
-      atualizarResumo(filtradas);
-      atualizarGrafico(filtradas);
-    }
+    const dataOk = (!dataInicio || dataAvaliacao >= dataInicio) &&
+                   (!dataFim || dataAvaliacao <= dataFim);
+    const empresaOk = empresaFiltro === "Todas" || a.empresa === empresaFiltro;
+
+    return dataOk && empresaOk;
+  });
+
+  atualizarTabela(filtradas);
+  atualizarResumo(filtradas);
+  atualizarGrafico(filtradas);
+}
 
     function atualizarTabela(lista) {
       const corpo = document.getElementById("tabelaAvaliacoes");
