--- a/index.abc.html
+++ b/index.abc.html
@@ -209,7 +209,7 @@
 </head>
 <body>
 <header>
-  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <img src="https://github.com/ClenaStore/painel-principal/blob/main/img/GRUPO%20DV.png?raw=true" alt="Logo CB Systems">
   <h1 id="tituloPainel">Painel ABC de Vendas</h1>
 </header>
 <div class="container">
