--- a/index.meta.html
+++ b/index.meta.html
@@ -116,7 +116,7 @@
 <body>
 
 <header>
-  <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
+  <img src="https://github.com/ClenaStore/painel-principal/blob/main/img/GRUPO%20DV%20(1).png?raw=true" alt="Logo CB Systems">
   <h1>📊 Painel de Metas - Grupo DV</h1>
 </header>
 
