--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
   <!-- Cabeçalho -->
   <header>
     <div class="logo-left">
-      <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
+      <img src="https://github.com/ClenaStore/painel-principal/blob/main/img/GRUPO%20DV%20(1).png?raw=true" alt="Logo">
     </div>
     <div class="title-center">
       <h2>Análise Financeira</h2>
