--- a/index.html
+++ b/index.html
@@ -140,15 +140,37 @@
     }
 
     @media (max-width: 500px) {
-      header {
-        flex-direction: column;
-        text-align: center;
-      }
+  header {
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+  }
 
-      .logo-left,
-      .spacer {
-        display: none;
-      }
+  .logo-left {
+    display: none;
+  }
+
+  .title-center {
+    flex: none;
+    width: 100%;
+  }
+
+  .spacer {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .card h2 {
+    font-size: 18px;
+  }
+
+  .icon {
+    font-size: 32px;
+  }
 
       .title-center {
         flex: 1;
