--- a/index.html
+++ b/index.html
@@ -73,16 +73,17 @@
   border-color: #2980b9;
 }
 
-    .title-center {
-      flex: 2;
-      text-align: center;
-    }
+    .title-left {
+  flex: 2;
+  text-align: left;
+}
 
-    .title-center h1 {
-      font-size: 24px;
-      margin: 0;
-      font-weight: bold;
-    }
+.title-left h1 {
+  font-size: 24px;
+  margin: 0;
+  font-weight: bold;
+}
+
 
     .spacer {
       flex: 1;
