--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: white;
-    }
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #000;
+  color: white;
+}
 
     #splash {
       position: fixed;
@@ -17,7 +18,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: white;
+      background: #000;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -36,13 +37,13 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-    header {
-      background-color: white;
-      color: #2c3e50;
+   header {
+  background-color: #111;
+  color: white;
       padding: 20px 40px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid #333;
     }
 
     .logo-left {
@@ -113,14 +114,14 @@
     }
 
     .card {
-      background: white;
+  background: #1a1a1a;
       border-radius: 12px;
       padding: 30px 20px;
       text-align: center;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s ease;
       text-decoration: none;
-      color: inherit;
+      color: white;
     }
 
     .card:hover {
