--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <style>
     body {
-  margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background-color: #000;
-  color: white;
-}
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: white;
+    }
 
     #splash {
       position: fixed;
@@ -18,7 +17,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      background: #000;
+      background: white;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -37,13 +36,13 @@
       100% { transform: scale(1); opacity: 1; }
     }
 
-   header {
-  background-color: #111;
-  color: white;
+    header {
+      background-color: white;
+      color: #2c3e50;
       padding: 20px 40px;
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #333;
+      border-bottom: 1px solid #ccc;
     }
 
     .logo-left {
@@ -114,14 +113,14 @@
     }
 
     .card {
-  background: #1a1a1a;
+      background: white;
       border-radius: 12px;
       padding: 30px 20px;
       text-align: center;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.2s ease;
       text-decoration: none;
-      color: white;
+      color: inherit;
     }
 
     .card:hover {
