--- a/perfil.html
+++ b/perfil.html
@@ -126,8 +126,8 @@
 
   <div class="perfil-container">
     <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Foto do Usuário" class="perfil-foto">
-    <div class="perfil-nome">João Silva</div>
-    <div class="perfil-email">joao@email.com</div>
+    <div class="perfil-nome">Leonardo Henrique</div>
+    <div class="perfil-email">leonardo_henrique1@hotmail.com</div>
 
     <div class="botoes">
       <button class="editar" onclick="editarPerfil()">Editar Perfil</button>
