--- a/index.abc.html
+++ b/index.abc.html
@@ -253,7 +253,7 @@ canvas {
 <body>
 <header>
   <img src="https://github.com/ClenaStore/painel-principal/blob/main/img/GRUPO%20DV%20(1).png?raw=true" alt="Logo CB Systems">
- <h1 id="tituloPainel">ABC DE VENDAS VILLA GOURMET</h1>
+ <h1 id="tituloPainel">ABC DE VENDAS GRUPO DV</h1>
 </header>
 <div class="container">
   <div class="filters">
